--- a/프로젝트모음/web_project_src/main/webapp/day02/dept.html
+++ b/프로젝트모음/web_project_src/main/webapp/day02/dept.html
@@ -16,6 +16,6 @@
 		</ul>
 	</fieldset>
 	<br>
-	<button onclick="location.href='/webshop/index.html'">돌아가기</button>
+	<button onclick="location.href='/web/index.html'">돌아가기</button>
 </body>
 </html>
