--- a/프로젝트모음/web_project_src/main/webapp/index.html
+++ b/프로젝트모음/web_project_src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>이정헌 index</title>
+<title>안세현 index</title>
 <link rel="stylesheet" href="css/external.css">
 <style type="text/css">
 	/* 
@@ -32,23 +32,23 @@
   	<fieldset>
   		<legend>DAY01</legend>
   		<ul>
-	  		<li><a href="day1/1.html">버튼 연습</a></li>
-	  		<li><a href="day1/2.html">라인 연습</a></li>
-	  		<li><a href="day1/3.html">제목 연습</a></li>
-	  		<li><a href="day1/4.html">테이블 및 이미지 연습</a></li>
-	  		<li><a href="day1/input_form.html">입력 연습1</a></li>
-	  		<li><a href="day1/imput_type.html">입력 연습2</a></li>
-	  		<li><a href="day1/searchByJob.html">직책별 직원 조회</a></li>
-  			<li><a href="day1/searchByDept.html">부서별 직원 조회</a></li>
-  			<li><a href="day1/jsp/empAll.jsp">전체 직원 조회</a></li>
+	  		<li><a href="day01/1.html">버튼 연습</a></li>
+	  		<li><a href="day01/2.html">라인 연습</a></li>
+	  		<li><a href="day01/3.html">제목 연습</a></li>
+	  		<li><a href="day01/4.html">테이블 및 이미지 연습</a></li>
+	  		<li><a href="day01/input_form.html">입력 연습1</a></li>
+	  		<li><a href="day01/imput_type.html">입력 연습2</a></li>
+	  		<li><a href="day01/searchByJob.html">직책별 직원 조회</a></li>
+  			<li><a href="day01/searchByDept.html">부서별 직원 조회</a></li>
+  			<li><a href="day01/jsp/empAll.jsp">전체 직원 조회</a></li>
   		</ul>
   	</fieldset>
   	<fieldset>
   		<legend>DAY02</legend>
   		<ul>
-  			<li><a href="day1/emp.html">직원 관리</a></li>
-  			<li><a href="day2/dept.html">부서 관리</a></li>
-  			<li><a href="day2/select.html">Select 토글 연습</a></li>
+  			<li><a href="day01/emp.html">직원 관리</a></li>
+  			<li><a href="day02/dept.html">부서 관리</a></li>
+  			<li><a href="day02/select.html">Select 토글 연습</a></li>
   		</ul>
   	</fieldset>
 
