--- a/프로젝트모음/appleShop_src/main/webapp/index.html
+++ b/프로젝트모음/appleShop_src/main/webapp/index.html
@@ -22,8 +22,11 @@
 		</li>
 	</ul>
 	<!-- http://localhost:9090 -->
-	<a href="emp/emplist.do">직원조회</a>
-	<a href="dept/deptlist">부서조회</a>
-	<a href="dept/deptinsert">부서입력</a>
+	<ul>
+		<li><a href="emp/emplist.do">직원조회</a></li>
+		<li><a href="emp/empinsert.do">직원등록</a></li>
+		<li><a href="dept/deptlist">부서조회</a></li>
+		<li><a href="dept/deptinsert">부서입력</a></li>
+	</ul>
 </body>
 </html>
