--- a/프로젝트모음/aptproject_src/main/webapp/index.html
+++ b/프로젝트모음/aptproject_src/main/webapp/index.html
@@ -2,14 +2,33 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>주택청약접수 메인 페이지</title>
+<title>청약 접수 시스템</title>
+<!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<style>
+  body {
+    background-color: #f8f9fa;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Segoe UI', sans-serif;
+  }
+  .card {
+    padding: 40px;
+    border-radius: 20px;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+  }
+</style>
 </head>
 <body>
-	<h1>메인 페이지!!!</h1>
-	<a href="/application_office/userInfo">접수자 정보 조회</a>
-	<p id="here"></p>
-	<script>	
-		document.getElementById("here").textContent = window.location.pathname;
-	</script>
+
+  <div class="card text-center">
+    <h1 class="mb-4">청약 접수 시스템</h1>
+    <a href="./mainpage" class="btn btn-primary btn-lg">접수 홈페이지 이동</a>
+  </div>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
